# hello-django

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml
hello_app/: asgi.py  settings.py  urls.py  wsgi.py
