[tool.poetry]
name = "hello-app"
version = "0.1.0"
description = ""
authors = ["francium <francium@francium.cc>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
